<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- User portal -->
    <string name="welcome">Welcome to Survey Wild!</string>
    <string name="user_prompt">Please create a username to continue.</string>
    <string name="username">Username: </string>
    <string name="password">Password: </string>
    <string name="email">Email: </string>
    <string name="name_last">Last Name: </string>
    <string name="name_first">First Name: </string>
    <string name="organization">Organization: </string>
    <string name="create">Create Username</string>
    <string name="user_exist">Already have a username? Sign in!</string>
    <string name="guest">Or continue as a guest.</string>
    <string name="signIn">Sign In</string>

    <!-- Main page -->
    <string name="identify">Identify!</string>
    <string name="survey">Survey!</string>
    <string name="view_species">Browse species</string>
    <string name="view_sightings">Browse sightings</string>

    <!-- ID main menu -->
    <string name="plants">Plants</string>
    <string name="animals">Animals</string>
    <string name="fungi">Fungi</string>
    <string name="protists">Protists</string>
    <string name="invasive">Invasives</string>

    <!-- ID Plant menu -->
    <string name="trees">Trees</string>
    <string name="shrubs">Shrubs</string>
    <string name="vines">Vines</string>
    <string name="grass">Grass</string>
    <string name="flowers">Flowers</string>
    <string name="other">Other</string>

    <!-- ID Animal menu -->
    <string name="birds">Birds</string>
    <string name="insects">Insects</string>
    <string name="mammal">Mammals</string>
    <string name="herp">Reptiles &amp; Amphibians</string>
    <string name="fish">Fish</string>
    <string name="app_name">Survey Wild</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="title_activity_identify">Identify</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_survey">Survey</string>

</resources>
