<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".UserPortal">

    <TextView android:text="@string/welcome"
        android:layout_gravity="center"
        android:textSize="@dimen/abc_text_size_headline_material"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView android:text="@string/user_prompt"
        android:layout_gravity="center"
        android:textSize="@dimen/abc_text_size_medium_material"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/username"
            android:textStyle="bold"
            android:layout_width="0dip"
            android:layout_weight="0.25"
            android:layout_height="wrap_content" />

        <EditText
            android:inputType="text"
            android:textStyle="bold"
            android:background="@android:drawable/editbox_background"
            android:layout_width="0dip"
            android:layout_weight="0.75"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/password"
            android:textStyle="bold"
            android:layout_width="0dip"
            android:layout_weight="0.25"
            android:layout_height="wrap_content" />

        <EditText
            android:inputType="text"
            android:textStyle="bold"
            android:background="@android:drawable/editbox_background"
            android:layout_width="0dip"
            android:layout_weight="0.75"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/name_first"
            android:layout_width="0dip"
            android:layout_weight="0.25"
            android:layout_height="wrap_content" />

        <EditText
            android:inputType="text"
            android:textStyle="bold"
            android:background="@android:drawable/editbox_background"
            android:layout_width="0dip"
            android:layout_weight="0.75"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/name_last"
            android:layout_width="0dip"
            android:layout_weight="0.25"
            android:layout_height="wrap_content" />

        <EditText
            android:inputType="text"
            android:textStyle="bold"
            android:background="@android:drawable/editbox_background"
            android:layout_width="0dip"
            android:layout_weight="0.75"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/organization"
            android:layout_width="0dip"
            android:layout_weight="0.25"
            android:layout_height="wrap_content" />

        <EditText
            android:inputType="text"
            android:textStyle="bold"
            android:background="@android:drawable/editbox_background"
            android:layout_width="0dip"
            android:layout_weight="0.75"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/email"
            android:layout_width="0dip"
            android:layout_weight="0.25"
            android:layout_height="wrap_content" />

        <EditText
            android:inputType="text"
            android:textStyle="bold"
            android:background="@android:drawable/editbox_background"
            android:layout_width="0dip"
            android:layout_weight="0.75"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:text="@string/create"
        android:id="@+id/createUserBtn"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_gravity="center"
        android:text="@string/user_exist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_gravity="center"
        android:text="@string/guest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
